# tutorials

./: .gitignore  README.en.md  README.md  README_vi.md  ac_mode_and_fan_control_full_llm.yaml  advanced_google_search_full_llm.yaml  advanced_youtube_search_full_llm.yaml  calendar_events_full_llm.yaml  calendar_events_lookup_full_llm.yaml  camera_snapshot_full_llm.yaml  check_the_device_turns_on_manually.yaml  control_music_full_llm.yaml  create_calendar_event_full_llm.yaml  create_lunar_events.yaml  date_conversion_tool_full_llm.yaml  date_lookup_and_conversion_full_llm.yaml  device_control_timer_full_llm.yaml  device_control_tool.yaml  device_location_lookup_full_llm.yaml  device_ringing_full_llm.yaml  device_timer.yaml  device_timer_full_llm.yaml  device_timer_restart.yaml  devices_schedule.yaml  devices_schedule_controller_full_llm.yaml  devices_schedule_restart_handler.yaml  devices_schedules.yaml  devices_schedules_controller_full_llm.yaml  devices_schedules_restart_handler.yaml  devices_timer.yaml  devices_timer_controller_full_llm.yaml  devices_timer_restart_handler.yaml  fan_oscillation_control_full_llm.yaml  fan_speed_and_oscillation_control_full_llm.yaml  fan_speed_control_full_llm.yaml  file_content_analyzer_full_llm.yaml  get_youtube_video_detail_full_llm.yaml  get_youtube_video_details_full_llm.yaml  get_youtube_video_info_full_llm.yaml  home_assistant_device_location_lookup_guide_en.md  (+35 more)
scripts/: AL.py  common_utilities.py  date_conversion_tool.py  memory.py  requirements.txt  telegram_bot_handle_tool.py  traffic_fine_lookup_tool.py  youtube_data_tool.py  (+3 more)
(+1 files in other folders)
