[project]
name = "tutorials"
version = "1.0.0"
description = "Home Assistant Blueprints & Tutorials"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
  "beautifulsoup4",
  "curl-cffi",
  "google-api-python-client",
  "h2>=4,<5",
  "homeassistant>=2026.5.0",
  "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
  "TID", # flake8-tidy-imports
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
